0.4.0
    with the introduction of lock protection mechanism (see #112) GraphHopper needs always write access, see also #217
    new GraphHopper.clean method to remove the directory via Java API
    FlagEncoder: replaced isFoward and isBackward with more generic isBool(flags, FlagEncoder.FORWARD|BACKWARD)
        restrictions type was: String[], is: List<String>

0.3.0
    introduced prefer bits, now bike uses more bits and 3 bike encoder do not fit into 32 bit anymore, will be fixed later
    moved Translation argument into Path.calcInstruction for more fine grained control, instructions are now uncached and GHRequest: new locale parameter
    CoordTrig and the like are removed, GHPlace is mostly replaced by GHPoint and so GHRequest has now methods ala addPoint instead
    removed isBoth from AbstractFlagEncoder, moved canBeOverwritten and associated test to PrepareEncoder
    removed unused directory.rename
    refactor edge.copyProperties into copyPropertiesTo to have similar semantics as Graph.copyTo
    calcWeight now contains reverse boolean to calculate correct direction dependent weight
    completely different web API response format. see docs/web
    swapDirections is renamed to reverseFlags (EncodingManager and FlagEncoders)
    edgeState.detach has now a reverse parameter, just use false to get previous results
    web api: buildDate contains now timezone, algoType is replaced with weighting
    dijkstraNative is now dijkstraNativebi
    fixed #151
    calcWeight now contains reverse boolean to calculate correct direction dependent weight
    EncodingManager always takes the encoders in constructor, to force always init
    GraphHopper.setMemory(true, true/false) was refactored to GraphHopper.setMemory(true/false), use mmap config via GraphHopper.setMemoryMapped()
    incompatible edges => you need to re-import data and/or update the edges file
    the instructions of the web response does not contain times (string) but instead millis (long)